布局和效果完成

--- a/ife_day9/css/style.css
+++ b/ife_day9/css/style.css
@@ -138,30 +138,34 @@ p {
     text-align: center;
 }
 
+.mobile_first, .accessibility, .fluid_typography, .customization {
+    width: 360px;
+}
+
 .mobile_first {
     position: absolute;
     top: 150px;
-    left: 200px;
-    width: 400px;
+    left: 250px;
+    /* width: 360px; */
     overflow: auto;
 }
 .accessibility {
     position: absolute;
     top: 150px;
     right: 200px;
-    width: 400px;
+    /* width: 400px; */
 }
 .fluid_typography {
     position: absolute;
     top: 300px;
-    left: 200px;
-    width: 400px;
+    left: 250px;
+    /* width: 400px; */
 }
 .customization {
     position: absolute;
     top: 300px;
     right: 200px;
-    width: 400px;
+    /* width: 400px; */
 }
 
 .content1 span {
@@ -178,7 +182,7 @@ p {
 }
 
 .mobile_Icon {
-    background: url("./img/Iphone Icon.png") center no-repeat;
+    background: url("file:///C:/软件安装路径/Microsoft VS Code/IFE2019/ife_day9/img/Iphone Icon.png") center no-repeat;
 }
 .access_Icon {
     background: url("file:///C:/软件安装路径/Microsoft VS Code/IFE2019/ife_day9/img/Access Icon.png") center no-repeat;
@@ -356,18 +360,98 @@ p {
     margin: 2% auto;
 }
 
-.crew .pics {
+ .crew .pics {
     display: flex;
     flex-wrap: wrap;
 
 }
+.member {
+    width: 370px;
+    height: 270px;
+    margin: 15px;
+}
 
-.crew img {
+.crew .pics .cont {
+    width: 370px;
+    height: 270px;
+    background-color: rgba(101,101,101,.5);
+    cursor: pointer;
+    visibility: hidden;
+    transition: 0.3s visibility ease-in;
+
+}
+.crew .member:hover .cont {
+    visibility: visible;
+}
+
+.crew .txt {
+    /* margin-top: 60px; */
+    position: relative;
+    top:80px;
+}
+.crew .pics h3 {
+    text-align: center;
+    margin-top: 0;
+    color: white;
+}
+.crew .pics p {
+    width: 300px;
+
+}
+
+.crew .social_button {
+    display: flex;
+    width: 240px;
+    margin: 100px auto;
+
+}
+
+.crew .social_button a {
+    flex:1;
+}
+.crew span {
+    display: block;
+    width: 51px;
+    height: 54px;
+    margin: 0 auto;
+}
+
+.crew .pics .facebook {
+    background: url("file:///C:/软件安装路径/Microsoft VS Code/IFE2019/ife_day9/img/Facebook.png");
+
+}
+.crew .pics .twitter {
+    background: url("file:///C:/软件安装路径/Microsoft VS Code/IFE2019/ife_day9/img/Twitter.png");
+}
+.crew .pics .ins {
+    background: url("file:///C:/软件安装路径/Microsoft VS Code/IFE2019/ife_day9/img/Instagram.png");
+}
+
+
+.crew .pics .crew1 {
+    background: url("file:///C:/软件安装路径/Microsoft VS Code/IFE2019/ife_day9/img/Userpic 1.png") no-repeat center;
+    background-size: cover;
+}
+.crew .pics .crew2 {
+    background: url("file:///C:/软件安装路径/Microsoft VS Code/IFE2019/ife_day9/img/Userpic 2.png") no-repeat center;
+    background-size: cover;
+}
+.crew .pics .crew3 {
+    background: url("file:///C:/软件安装路径/Microsoft VS Code/IFE2019/ife_day9/img/Userpic 3.png") no-repeat center;
+    background-size: cover;
+}
+.crew .pics .crew4 {
+    background: url("file:///C:/软件安装路径/Microsoft VS Code/IFE2019/ife_day9/img/Userpic 4.png") no-repeat center;
+    background-size: cover;
+}
+
+
+/*.crew img {
     flex: 40%;
     margin: 2%;
     cursor: pointer;
 
-}
+} */
 
 .contact {
     width: 900px;
